<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeActivity"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:id="@+id/header_title">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_outline_location_on_24"
            android:background="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bali"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="150dp"
            android:src="@drawable/ic_outline_home_24"
            android:background="@color/blue"/>
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_outline_person_24"
            android:background="@color/blue"/>
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_notifications_none_24"
            android:background="@color/blue"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_below="@+id/header_title">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:layout_marginStart="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/month"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_gravity="top"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_gravity="top" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/cloud"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/rsz_cloud"
            android:layout_marginStart="40dp"/>

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_gravity="end|bottom"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background"
        android:layout_margin="20dp"
        android:layout_below="@id/header_info">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pilih_tanggal"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <ImageButton
                android:id="@+id/pick_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_today_24"/>

            <TextView
                android:id="@+id/pick_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_format"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginStart="5sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/date_format"
            android:textColor="@color/white"
            android:layout_marginStart="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pilih_kategori"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <CheckBox
                android:id="@+id/nature"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/nature"
                android:padding="10dp"
                android:layout_margin="10dp"/>

            <CheckBox
                android:id="@+id/culture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/culture"
                android:padding="10dp"
                android:layout_margin="10dp"/>

            <CheckBox
                android:id="@+id/man_made"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/man_made"
                android:padding="10dp"
                android:layout_margin="10dp"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/cek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/body"
        android:layout_margin="15dp"
        android:text="@string/search"/>

</RelativeLayout>