<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainActivity.MainActivity"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:id="@+id/header_title">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_outline_location_on_24"
            android:background="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bali"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="150dp"
            android:src="@drawable/ic_outline_home_24"
            android:background="@color/blue"/>
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_outline_person_24"
            android:background="@color/blue"/>
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_notifications_none_24"
            android:background="@color/blue"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_below="@+id/header_title">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:layout_marginStart="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/month"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_gravity="top"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_gravity="top" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/cloud"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/rsz_cloud"
            android:layout_marginStart="40dp"/>

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_gravity="end|bottom"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/recyclerView"
        android:layout_marginStart="15dp"
        android:text="@string/tci"
        android:textSize="15sp"
        android:textColor="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_info"
            android:layout_margin="10dp"
            tools:listitem="@layout/list_item"
            android:background="@drawable/background"/>

</RelativeLayout>